--- a/daawa/templates/contact.html
+++ b/daawa/templates/contact.html
@@ -7,7 +7,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!DOCTYPE HTML>
 <html>
 <head>
-<title>The Free MusicX Website Template | Contact :: w3layouts</title>
+<title>SUNNAH ISLAM MEDIA| Home</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
@@ -158,7 +158,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 </div>
 <div class="footer1-bg">
 	<div class="copy">
-		<p>© 2013 Musicx . All rights Reserved | Design by &nbsp;<a href="http://w3layouts.com">W3Layouts</a></p>
+		<p>© 2022 Sunnah Islam Media. All rights reserved | Design by <a href="#"> Usak.designs.</a></p>
 	</div>	
 </div>
 </div>
