--- a/daawa/templates/audios.html
+++ b/daawa/templates/audios.html
@@ -4,24 +4,25 @@ Author URL: http://w3layouts.com
 License: Creative Commons Attribution 3.0 Unported
 License URL: http://creativecommons.org/licenses/by/3.0/
 -->
+{% load  static %}
 <!DOCTYPE HTML>
 <html>
 <head>
 <title>SUNNAH ISLAM MEDIA| Home</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-<link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
+<link href="{% static 'css/style.css' %}" rel="stylesheet" type="text/css" media="all" />
 <!--nav-->
-<script src="js/jquery.min.js"></script>
-<script src="js/script.js" type="text/javascript"></script>
-<script src="js/superfish.js"></script>
+<script src="{% static 'js/jquery.min.js' %}"></script>
+<script src="{% static 'js/script.js' %}" type="text/javascript"></script>
+<script src="{% static 'js/superfish.js' %}"></script>
 </head>
 <body>
 <div class="wrap">
 	<div class="header">
 		<div class="header_top">
 			<div class="logo">
-				<a href="index.html"><img src="images/logo.png" alt="" /></a>
+				<a href="{% url 'All_islam' %}"><img src="{% static 'images/sunnahlogo.png' %}" alt="" /></a>
 			</div>
 			  <div class="header_top_right">
 			    <div class="search_box">
@@ -47,39 +48,38 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		</select>
 		</div>
 	   <div class="login">
-		   	   <span><a href="login.html"><img src="images/login.png" alt="" title="login"/></a></span>
+		   	   <span><a href="#"><img src="{% static 'images/login.png' %}" alt="" title="login"/></a></span>
 		   </div>
-		 <div class="clear"></div>
+		 <div class="clear"></div>   
 	 </div>
 	 <div class="clear"></div>
+ </div>                           
  </div>
- </div>
-</div>
 <!--menu-->
 <div class="menu-bg">
 <div class="wrap" style="box-shadow: none;">
 		<nav>
 		  <ul class="sf-menu">
-		        <li class="current"><a href="index.html">Home</a></li>
-		        <li><a href="specials.html">Specials</a></li>
-		        <li class="sub-menu"><a href="artists.html">Artists</a>
+		        <li class="current"><a href="{% url 'All_islam' %}">Home</a></li>
+		        <li><a href="{% url 'specials' %}">Specials</a></li>
+		        <li class="sub-menu"><a href="{% url 'quran' %}">Artists</a>
 		        	<ul>
-		                <li><a href="artists.html">Artists 01</a></li>
-		               <li><a href="artists.html">Artists 02</a></li>
-		                <li class="last3 sub-menu"><a href="artists.html">Artists 03</a>
+		                <li><a href="{% url 'quran' %}">Artists 01</a></li>
+		               <li><a href="{% url 'quran' %}">Artists 02</a></li>
+		                <li class="last3 sub-menu"><a href="a{% url 'quran' %}">Artists 03</a>
 		                </li>
 		            </ul>
 		        </li>
-		        <li><a href="contact.html">Contact</a></li>
+		        <li><a href="{% url 'contact' %}">Contact</a></li>
 		    </ul>
 		    <div class="clear"></div>
 		</nav>
 		<div class="soc-icons">
 		<ul>
 			<li><a href="">Get In Touch&nbsp;</a></li>
-			<li><a href=""><img src="images/facebook.png" alt=""></a></li>
-			<li><a href=""><img src="images/twitter.png" alt=""></a></li>
-		<li><a href=""><img src="images/rss.png" alt=""></a></li>
+			<li><a href=""><img src="{% static 'images/facebook.png' %}" alt=""></a></li>
+			<li><a href=""><img src="{% static 'images/twitter.png' %}" alt=""></a></li>
+	    	<li><a href=""><img src="{% static 'images/rss.png' %}" alt=""></a></li>
 		
 		</ul>
 	</div>
@@ -109,8 +109,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			</div>
 			<div class="grid_1_of_4 images_1_of_4">
 				<h3>Latest Music</h3>
-				 <p><a href=""><img src="images/art-pic1.jpg" alt="">Sed Suspendisse fringilla sagittis auctor. Mauris aliquam suscipit adipiscing. Pellentesque  ultrices.</a></p>
-			 	 <p class="top"><a href=""><img src="images/art-pic2.jpg" alt="">Sed Suspendisse fringilla sagittis auctor. Mauris aliquam suscipit adipiscing. Pellentesque  ultrices.</a></p>
+				 <p><a href=""><img src="{% static 'images/art-pic1.jpg' %}" alt="">Sed Suspendisse fringilla sagittis auctor. Mauris aliquam suscipit adipiscing. Pellentesque  ultrices.</a></p>
+			 	 <p class="top"><a href=""><img src="{% static 'images/art-pic2.jpg' %}" alt="">Sed Suspendisse fringilla sagittis auctor. Mauris aliquam suscipit adipiscing. Pellentesque  ultrices.</a></p>
 			</div>
 	</div>
 </div>
@@ -120,5 +120,5 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	</div>	
 </div>
 </div>
-</body>
+</body>   
 </html>
