--- a/daawa/templates/islam_serie_episode.html
+++ b/daawa/templates/islam_serie_episode.html
@@ -61,28 +61,28 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!--menu-->
 <div class="menu-bg">
 <div class="wrap" style="box-shadow: none;">
-		<nav>
-		  <ul class="sf-menu">
-		        <li class="current"><a href="index.html">Home</a></li>
-		        <li><a href="specials.html">Specials</a></li>
-		        <li class="sub-menu"><a href="artists.html">Artists</a>
-		        	<ul>
-		                <li><a href="artists.html">Artists 01</a></li>
-		               <li><a href="artists.html">Artists 02</a></li>
-		                <li class="last3 sub-menu"><a href="artists.html">Artists 03</a>
-		                </li>
-		            </ul>
-		        </li>
-		        <li><a href="contact.html">Contact</a></li>
-		    </ul>
-		    <div class="clear"></div>
-		</nav>
+	<nav>
+		<ul class="sf-menu">
+			  <li class="current"><a href="{% url 'All_islam' %}">Home</a></li>
+			  <li><a href="{% url 'specials' %}">Specials</a></li>
+			  <li class="sub-menu"><a href="{% url 'quran' %}">Quran</a>
+				  <ul>
+					  <li><a href="{% url 'quran' %}">Artists 01</a></li>
+					 <li><a href="{% url 'quran' %}">Artists 02</a></li>
+					  <li class="last3 sub-menu"><a href="{% url 'quran' %}">Artists 03</a>
+					  </li>
+				  </ul>
+			  </li>
+			  <li><a href="{% url 'contact' %}">Contact</a></li>
+		  </ul>
+		  <div class="clear"></div>
+	  </nav>
 		<div class="soc-icons">
 		<ul>
 			<li><a href="">Get In Touch&nbsp;</a></li>
-			<li><a href=""><img src="images/facebook.png" alt=""></a></li>
-			<li><a href=""><img src="images/twitter.png" alt=""></a></li>
-			<li><a href=""><img src="images/rss.png" alt=""></a></li>
+			<li><a href=""><img src="{% static 'images/facebook.png' %}" alt=""></a></li>
+			<li><a href=""><img src="{% static 'images/twitter.png' %}" alt=""></a></li>
+	    	<li><a href=""><img src="{% static 'images/rss.png' %}" alt=""></a></li>
 		</ul>
 	</div>
 	<div class="clear"></div>
@@ -99,12 +99,12 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit</h4>
 				<div class="cart-b">
 					<span class="price left"><sup>$21.00</sup><sub></sub></span>
-				    <div class="btn1 right"><a href="details.html">Add to Cart</a></div>
+				    <div class="btn1 right"><a href="#">Add to Cart</a></div>
 				    <div class="clear"></div>
 				 </div>
 				 <h3>Lorem ipsum dolor sit amet</h3>
 			   	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-			   	<div class="btn1 top"><a href="details.html">More details</a></div>
+			   	<div class="btn1 top"><a href="#">More details</a></div>
 			   	</div>
 			   <div class="clear"></div>	
 		   </div>
