--- a/daawa/templates/one_sheikh_detail.html
+++ b/daawa/templates/one_sheikh_detail.html
@@ -8,7 +8,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!DOCTYPE HTML>
 <html>             
 <head>
-<title>The Free MusicX Website Template | Details :: w3layouts</title>
+<title>SUNNAH ISLAM MEDIA</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <link href="{% static 'css/style.css' %}" rel="stylesheet" type="text/css" media="all" />
@@ -16,15 +16,14 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <script src="{% static 'js/jquery.min.js' %}"></script>
 <script src="{% static 'js/script.js' %}" type="text/javascript"></script>
 <script src="{% static 'js/superfish.js' %}"></script>
-<!--image slider-->
-<script src="{% static 'js/jquery-slider.js' %}" type="text/javascript"></script>
+
 </head>
 <body>
 <div class="wrap">
 	<div class="header">
-		<div class="header_top">
+		<div class="header_top">     
 			<div class="logo">
-				<a href="index.html"><img src="images/logo.png" alt="" /></a>
+				<a href="{% url 'contact' %}"><img src="{% static 'images/logo.png' %}" alt="" /></a>
 			</div>
 			  <div class="header_top_right">
 			    <div class="search_box">
@@ -50,7 +49,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		</select>
 		</div>
 	   <div class="login">
-		   	   <span><a href="login.html"><img src="{% static 'images/login.png' %}" alt="" title="login"/></a></span>
+		   	   <span><a href="#"><img src="{% static 'images/login.png' %}" alt="" title="login"/></a></span>
 		   </div>
 		 <div class="clear"></div>
 	 </div>
@@ -61,28 +60,28 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!--menu-->
 <div class="menu-bg">
 <div class="wrap" style="box-shadow: none;">
-		<nav>
-		  <ul class="sf-menu">
-		        <li class="current"><a href="{% url 'All_islam' %}">Home</a></li>
-		        <li><a href="specials.html">Specials</a></li>
-		        <li class="sub-menu"><a href="artists.html">Artists</a>
-		        	<ul>
-		                <li><a href="artists.html">Artists 01</a></li>
-		               <li><a href="artists.html">Artists 02</a></li>
-		                <li class="last3 sub-menu"><a href="artists.html">Artists 03</a>
-		                </li>
-		            </ul>
-		        </li>
-		        <li><a href="contact.html">Contact</a></li>
-		    </ul>
-		    <div class="clear"></div>
-		</nav>
+	<nav>
+		<ul class="sf-menu">
+			  <li class="current"><a href="{% url 'All_islam' %}">Home</a></li>
+			  <li><a href="{% url 'specials' %}">Specials</a></li>
+			  <li class="sub-menu"><a href="{% url 'quran' %}">Quran</a>
+				  <ul>
+					  <li><a href="{% url 'quran' %}">Artists 01</a></li>
+					 <li><a href="{% url 'quran' %}">Artists 02</a></li>
+					  <li class="last3 sub-menu"><a href="{% url 'quran' %}">Artists 03</a>
+					  </li>
+				  </ul>
+			  </li>
+			  <li><a href="{% url 'contact' %}">Contact</a></li>
+		  </ul>
+		  <div class="clear"></div>
+	  </nav>
 		<div class="soc-icons">
 		<ul>
 			<li><a href="">Get In Touch&nbsp;</a></li>
-			<li><a href=""><img src="images/facebook.png" alt=""></a></li>
-			<li><a href=""><img src="images/twitter.png" alt=""></a></li>
-			<li><a href=""><img src="images/rss.png" alt=""></a></li>
+			<li><a href=""><img src="{% static 'images/facebook.png' %}" alt=""></a></li>
+			<li><a href=""><img src="{% static 'images/twitter.png' %}" alt=""></a></li>
+	    	<li><a href=""><img src="{% static 'images/rss.png' %}" alt=""></a></li>
 		</ul>
 	</div>
 	<div class="clear"></div>
@@ -90,21 +89,35 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 </div>
 <div class="wrap">            
 <div class="main">
+	<div class="text-center">
 <div class="special">
+	<h2>{{ get_one_shk.sheikh_name}} : {{ get_one_shk.lecture_name}}</h2>
+	<hr>
 			<div class="single">
 				<div class="grid-img1">
-					<img src="{{ get_one_shk.lecture_image.url }}">
+					<p>  <video
+						id="my-video"
+						class="video-js"
+						controls
+						preload="auto"
+						width="auto"
+						height="264"
+						poster="{{ get_one_shk.lecture_image.url }}"
+						data-setup="{}"
+					  >
+						<source src="{{ get_one_shk.lecture_video.url }}" type="video/mp4" />
+						</video></p>
 				</div>
 				<div class="para">
 					<h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit</h4>
 				<div class="cart-b">
 					<span class="price left"><sup>$21.00</sup><sub></sub></span>
-				    <div class="btn1 right"><a href="details.html">Add to Cart</a></div>
+				    <div class="btn1 right"><a href="#">Add to Cart</a></div>
 				    <div class="clear"></div>
 				 </div>
 				 <h3>Lorem ipsum dolor sit amet</h3>
 			   	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-			   	<div class="btn1 top"><a href="details.html">More details</a></div>
+			   	<div class="btn1 top"><a href="#">More details</a></div>
 			   	</div>
 			   <div class="clear"></div>	
 		   </div>
@@ -116,34 +129,14 @@ License URL: http://creativecommons.org/licenses/by/3.0/
         	<img src="{% static 'images/pic4.jpg' %}" alt=""/>
             <img src="{% static 'images/pic5.jpg' %}" alt="" />
             <img src="{% static 'images/pic6.jpg' %}" alt="" />
-            <img src="{% static 'images/pic7jpg' %}" alt=""/>
+            <img src="{% static 'images/pic7.jpg' %}" alt=""/>
             <img src="{% static 'images/pic8.jpg' %}" alt=""/>
             <img src="{% static 'images/pic5.jpg' %}" alt="" />
         </div>
-   		</div>
-	</div>
-	<div class="spe-sidebar">
-	<div class="sidebar-list">
-		<h2>Categories</h2>
-			<ul>
-				<li><a href="#">Nulla commodo quam nec torto</a></li>
-				<li><a href="#">Quisque lobortis felis eget </a></li>
-				<li><a href="#">Proin sagittis lorem ac quam</a></li>
-				<li><a href="#">Nulla commodo quam nec torto</a></li>
-				<li><a href="#">Quisque lobortis felis eget </a></li>
-				<li><a href="#">Quisque lobortis felis eget </a></li>
-				<li><a href="#">Proin sagittis lorem quam</a></li>
-				<li><a href="#">Nulla commodo quam nec torto</a></li>
-				<li><a href="#">Quisque lobortis felis eget </a></li>
-				<li><a href="#">Quisque lobortis felis eget </a></li>
-				<li><a href="#">Proin sagittis lorem ac quam </a></li>
-				<li><a href="#">Proin sagittis lorem ac quam </a></li>
-				<li><a href="#">Nulla commodo quam nec tortor</a></li>
-				<li><a href="#">Proin sagittis lorem ac quam </a></li>
-				<li><a href="#">Nulla commodo quam nec tortor</a></li>
-		   </ul>
-	</div>
-	</div>
+   	</div>
+</div>
+</div>
+	
 	<div class="clear"></div>
 </div>
 <div class="footer">
@@ -162,8 +155,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			</div>
 			<div class="grid_1_of_4 images_1_of_4">
 				<h3>Latest Music</h3>
-				 <p><a href=""><img src="{% static 'images/art-pic1.jpg' %}" alt="">Sed Suspendisse fringilla sagittis auctor. Mauris aliquam suscipit adipiscing. Pellentesque  ultrices.</a></p>
-			 	 <p class="top"><a href=""><img src="{% static 'images/art-pic2.jpg' %}" alt="">Sed Suspendisse fringilla sagittis auctor. Mauris aliquam suscipit adipiscing. Pellentesque  ultrices.</a></p>
+				 <p><a href="#"><img src="{% static 'images/art-pic1.jpg' %}" alt="">Sed Suspendisse fringilla sagittis auctor. Mauris aliquam suscipit adipiscing. Pellentesque  ultrices.</a></p>
+			 	 <p class="top"><a href="#"><img src="{% static 'images/art-pic2.jpg' %}" alt="">Sed Suspendisse fringilla sagittis auctor. Mauris aliquam suscipit adipiscing. Pellentesque  ultrices.</a></p>
 			</div>
 	</div>
 </div>
