--- a/daawa/templates/quran.html
+++ b/daawa/templates/quran.html
@@ -59,28 +59,28 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!--menu-->
 <div class="menu-bg">
 <div class="wrap" style="box-shadow: none;">
-		<nav>
-		  <ul class="sf-menu">
-		        <li><a href="index.html">Home</a></li>
-		        <li><a href="specials.html">Specials</a></li>
-		        <li class="current" class="sub-menu"><a href="artists.html">Artists</a>
-		        	<ul>
-		                <li><a href="artists.html">Artists 01</a></li>
-		               <li><a href="artists.html">Artists 02</a></li>
-		                <li class="last3 sub-menu"><a href="artists.html">Artists 03</a>
-		                </li>
-		            </ul>
-		        </li>
-		        <li><a href="contact.html">Contact</a></li>
-		    </ul>
-		    <div class="clear"></div>
-		</nav>
+	<nav>
+		<ul class="sf-menu">
+			  <li class="current"><a href="{% url 'All_islam' %}">Home</a></li>
+			  <li><a href="{% url 'specials' %}">Specials</a></li>
+			  <li class="sub-menu"><a href="{% url 'quran' %}">Quran</a>
+				  <ul>
+					  <li><a href="{% url 'quran' %}">Artists 01</a></li>
+					 <li><a href="{% url 'quran' %}">Artists 02</a></li>
+					  <li class="last3 sub-menu"><a href="{% url 'quran' %}">Artists 03</a>
+					  </li>
+				  </ul>
+			  </li>
+			  <li><a href="{% url 'contact' %}">Contact</a></li>
+		  </ul>
+		  <div class="clear"></div>
+	  </nav>
 		<div class="soc-icons">
 		<ul>
 			<li><a href="">Get In Touch&nbsp;</a></li>
-			<li><a href=""><img src="images/facebook.png" alt=""></a></li>
-			<li><a href=""><img src="images/twitter.png" alt=""></a></li>
-			<li><a href=""><img src="images/rss.png" alt=""></a></li>
+			<li><a href=""><img src="{% static 'images/facebook.png' %}" alt=""></a></li>
+			<li><a href=""><img src="{% static 'images/twitter.png' %}" alt=""></a></li>
+	    	<li><a href=""><img src="{% static 'images/rss.png' %}" alt=""></a></li>
 				</ul>
 	</div>
 	<div class="clear"></div>
