--- a/daawa/templates/specials.html
+++ b/daawa/templates/specials.html
@@ -4,24 +4,25 @@ Author URL: http://w3layouts.com
 License: Creative Commons Attribution 3.0 Unported
 License URL: http://creativecommons.org/licenses/by/3.0/
 -->
+{% load  static %}
 <!DOCTYPE HTML>
 <html>
 <head>
-<title>The Free MusicX Website Template | Specials :: w3layouts</title>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-<link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
-<!--nav-->
-<script src="js/jquery.min.js"></script>
-<script src="js/script.js" type="text/javascript"></script>
-<script src="js/superfish.js"></script>
+	<title>SUNNAH ISLAM MEDIA| Home</title>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+	<link href="{% static 'css/style.css' %}" rel="stylesheet" type="text/css" media="all" />
+	<!--nav-->
+	<script src="{% static 'js/jquery.min.js' %}"></script>
+	<script src="{% static 'js/script.js' %}" type="text/javascript"></script>
+	<script src="{% static 'js/superfish.js' %}"></script>
 </head>
 <body>
 <div class="wrap">
 	<div class="header">
-		<div class="header_top">
+		<div class="header_top">  
 			<div class="logo">
-				<a href="index.html"><img src="images/logo.png" alt="" /></a>
+				<a href="{% url 'All_islam' %}"><img src="{% static 'images/sunnahlogo.png' %}" alt="" /></a>
 			</div>
 			  <div class="header_top_right">
 			    <div class="search_box">
@@ -45,9 +46,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<option value="">JAP</option>
 			<option value="">FREN</option>
 		</select>
-		</div>
+		</div>     
 	   <div class="login">
-		   	   <span><a href="login.html"><img src="images/login.png" alt="" title="login"/></a></span>
+		   	   <span><a href="#"><img src="{% static 'images/login.png' %}" alt="" title="login"/></a></span>
 		   </div>
 		 <div class="clear"></div>
 	 </div>
@@ -58,28 +59,28 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!--menu-->
 <div class="menu-bg">
 <div class="wrap" style="box-shadow: none;">
-		<nav>
-		  <ul class="sf-menu">
-		        <li><a href="index.html">Home</a></li>
-		        <li class="current"><a href="specials.html">Specials</a></li>
-		        <li class="sub-menu"><a href="artists.html">Artists</a>
-		        	<ul>
-		                <li><a href="artists.html">Artists 01</a></li>
-		               <li><a href="artists.html">Artists 02</a></li>
-		                <li class="last3 sub-menu"><a href="artists.html">Artists 03</a>
-		                </li>
-		            </ul>
-		        </li>
-		        <li><a href="contact.html">Contact</a></li>
-		    </ul>
-		    <div class="clear"></div>
-		</nav>
+	<nav>
+		<ul class="sf-menu">
+			  <li class="current"><a href="{% url 'All_islam' %}">Home</a></li>
+			  <li><a href="{% url 'specials' %}">Specials</a></li>
+			  <li class="sub-menu"><a href="{% url 'quran' %}">Quran</a>
+				  <ul>
+					  <li><a href="{% url 'quran' %}">Artists 01</a></li>
+					 <li><a href="{% url 'quran' %}">Artists 02</a></li>
+					  <li class="last3 sub-menu"><a href="{% url 'quran' %}">Artists 03</a>
+					  </li>
+				  </ul>
+			  </li>
+			  <li><a href="{% url 'contact' %}">Contact</a></li>
+		  </ul>
+		  <div class="clear"></div>
+	  </nav>
 		<div class="soc-icons">
 		<ul>
 			<li><a href="">Get In Touch&nbsp;</a></li>
-			<li><a href=""><img src="images/facebook.png" alt=""></a></li>
-			<li><a href=""><img src="images/twitter.png" alt=""></a></li>
-			<li><a href=""><img src="images/rss.png" alt=""></a></li>
+			<li><a href=""><img src="{% static 'images/facebook.png' %}" alt=""></a></li>
+			<li><a href=""><img src="{% static 'images/twitter.png' %}" alt=""></a></li>
+	    	<li><a href=""><img src="{% static 'images/rss.png' %}" alt=""></a></li>
 	
 		</ul>
 	</div>
@@ -89,43 +90,43 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <div class="wrap">
 <div class="main">
 	<div class="special">
-	<h2>Featured Albums</h2>
+	<h2>Featured Albums</h2>   
 			<div class="section group">
 				<div class="grid_1_of_3 spe-images_1_of_4">
-					 <a href="details.html"><img src="images/pic5.jpg" alt=""></a>
-					 <a href="details.html"><h3>Lorem Ipsum</h3></a>
+					 <a href="#"><img src="{% static 'images/pic5.jpg' %}" alt=""></a>
+					 <a href="#"><h3>Lorem Ipsum</h3></a>
 				     <span class="price"><sup>$32.88</sup><sub>pm</sub></span>
 				     <div class="btn">
-				     	<a href="details.html">Add to Cart</a>
+				     	<a href="#">Add to Cart</a>
 				     </div>
 				</div>
 				<div class="grid_1_of_3 spe-images_1_of_4">
-					 <a href="details.html"><img src="images/pic6.jpg" alt=""></a>
-					  <a href="details.html"><h3>Lorem Ipsum</h3></a>
+					 <a href="#"><img src="{% static 'images/pic6.jpg' %}" alt=""></a>
+					  <a href="#"><h3>Lorem Ipsum</h3></a>
 				      <span class="price"><sup>$21.00</sup><sub>pm</sub></span>
 				       <div class="btn">
-				     	<a href="details.html">Add to Cart</a>
+				     	<a href="#">Add to Cart</a>
 				     </div>
 				</div>
 				<div class="grid_1_of_3 spe-images_1_of_4">
-					 <a href="details.html"><img src="images/pic7.jpg" alt=""></a>
-					  <a href="details.html"><h3>Lorem Ipsum</h3></a>
+					 <a href="#"><img src="{% static 'images/pic7.jpg' %}" alt=""></a>
+					  <a href="#"><h3>Lorem Ipsum</h3></a>
 					  <span class="price"><sup>$23.78</sup><sub>pm</sub></span>
 				       <div class="btn">
-				     	<a href="details.html">Add to Cart</a>
+				     	<a href="#">Add to Cart</a>
 				     </div>
 				</div>
 								<div class="grid_1_of_3 spe-images_1_of_4">
-					 <a href="details.html"><img src="images/pic5.jpg" alt=""></a>
-					 <a href="details.html"><h3>Lorem Ipsum</h3></a>
+					 <a href="#"><img src="{% static 'images/pic5.jpg' %}" alt=""></a>
+					 <a href="#"><h3>Lorem Ipsum</h3></a>
 				     <span class="price"><sup>$32.88</sup><sub>pm</sub></span>
 				     <div class="btn">
-				     	<a href="details.html">Add to Cart</a>
+				     	<a href="#">Add to Cart</a>
 				     </div>
 				</div>
 				<div class="grid_1_of_3 spe-images_1_of_4">
-					  <a href="details.html"><img src="images/pic8.jpg" alt=""></a>
-					  <a href="details.html"><h3>Lorem Ipsum</h3></a>
+					  <a href="#"><img src="{% static 'images/pic8.jpg' %}" alt=""></a>
+					  <a href="#"><h3>Lorem Ipsum</h3></a>
 					  <span class="price"><sup>$69.66</sup><sub>pm</sub></span>
 				      <div class="btn">
 				     	<a href="">Add to Cart</a>
@@ -136,23 +137,23 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<h2 class="bg">Our Specials</h2>
 			<div class="section group">
 				<div class="grid_1_of_3 spe-images_1_of_4">
-					 <a href="details.html"><img src="images/pic9.jpg" alt=""></a>
-					 <a href="details.html"><h3>Lorem Ipsum</h3></a>
+					 <a href="#"><img src="{% static 'images/pic9.jpg' %}" alt=""></a>
+					 <a href="#"><h3>Lorem Ipsum</h3></a>
 					<span class="price"><sup>$12.31</sup><sub>pm</sub></span>
 				     <div class="btn">
-				     	<a href="details.html">Add to Cart</a>
+				     	<a href="#">Add to Cart</a>
 				     </div>
 				</div>
 				<div class="grid_1_of_3 spe-images_1_of_4">
-					  <a href="details.html"><img src="images/pic10.jpg" alt=""></a>
-					  <a href="details.html"><h3>Lorem Ipsum</h3></a>
+					  <a href="#"><img src="{% static 'images/pic10.jpg' %}" alt=""></a>
+					  <a href="#"><h3>Lorem Ipsum</h3></a>
 					<span class="price"><sup>$69.66</sup><sub>pm</sub></span>
 			        <div class="btn">
-				     	<a href="details.html">Add to Cart</a>
+				     	<a href="#">Add to Cart</a>
 				     </div>
 				</div>
 				<div class="grid_1_of_3 spe-images_1_of_4">
-					 <a href="details.html"><img src="images/pic11.jpg" alt=""></a>
+					 <a href="details.html"><img src="{% static 'images/pic11.jpg' %}" alt=""></a>
 					  <a href="details.html"><h3>Lorem Ipsum</h3></a>
 					 <span class="price"><sup>$31.21</sup><sub>pm</sub></span>
 			       <div class="btn">
@@ -160,19 +161,19 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				     </div>
 				</div>
 				<div class="grid_1_of_3 spe-images_1_of_4">
-					  <a href="details.html"><img src="images/pic12.jpg" alt=""></a>
-					  <a href="details.html"><h3>Lorem Ipsum</h3></a>
+					  <a href="#"><img src="{% static 'images/pic12.jpg' %}" alt=""></a>
+					  <a href="#"><h3>Lorem Ipsum</h3></a>
 					<span class="price"><sup>$69.66</sup><sub>pm</sub></span>
 				        <div class="btn">
-				     	<a href="details.html">Add to Cart</a>
+				     	<a href="#">Add to Cart</a>
 				     </div>
 				</div>
 				<div class="grid_1_of_3 spe-images_1_of_4">
-					 <a href="details.html"><img src="images/pic5.jpg" alt=""></a>
-					 <a href="details.html"><h3>Lorem Ipsum</h3></a>
+					 <a href="#"><img src="{% static 'images/pic5.jpg' %}" alt=""></a>
+					 <a href="#"><h3>Lorem Ipsum</h3></a>
 				     <span class="price"><sup>$32.88</sup><sub>pm</sub></span>
 				     <div class="btn">
-				     	<a href="details.html">Add to Cart</a>
+				     	<a href="#">Add to Cart</a>
 				     </div>
 				</div>
 				<div class="clear"></div>
@@ -219,8 +220,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			</div>
 			<div class="grid_1_of_4 images_1_of_4">
 				<h3>Latest Music</h3>
-				 <p><a href=""><img src="images/art-pic1.jpg" alt="">Sed Suspendisse fringilla sagittis auctor. Mauris aliquam suscipit adipiscing. Pellentesque  ultrices.</a></p>
-			 	 <p class="top"><a href=""><img src="images/art-pic2.jpg" alt="">Sed Suspendisse fringilla sagittis auctor. Mauris aliquam suscipit adipiscing. Pellentesque  ultrices.</a></p>
+				 <p><a href=""><img src="{% static 'images/art-pic1.jpg' %}" alt="">Sed Suspendisse fringilla sagittis auctor. Mauris aliquam suscipit adipiscing. Pellentesque  ultrices.</a></p>
+			 	 <p class="top"><a href=""><img src="{% static 'images/art-pic2.jpg' %}" alt="">Sed Suspendisse fringilla sagittis auctor. Mauris aliquam suscipit adipiscing. Pellentesque  ultrices.</a></p>
 			</div>
 	</div>
 </div>
@@ -230,5 +231,5 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	</div>	
 </div>
 </div>
-</body>
+</body>      
 </html>
