rectified static in templates

--- a/daawa/templates/details.html
+++ b/daawa/templates/details.html
@@ -125,7 +125,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
         	<img src="{% static 'images/pic4.jpg' %}" alt=""/>
             <img src="{% static 'images/pic5.jpg' %}" alt="" />
             <img src="{% static 'images/pic6.jpg' %}" alt="" />
-            <img src="{% static 'images/pic7jpg' %}" alt=""/>
+            <img src="{% static 'images/pic7.jpg' %}" alt=""/>
             <img src="{% static 'images/pic8.jpg' %}" alt=""/>
             <img src="{% static 'images/pic5.jpg' %}" alt="" />
         </div>
