--- a/daawa/templates/quran.html
+++ b/daawa/templates/quran.html
@@ -125,7 +125,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<h2>Recent Albums</h2>
 	<div class="sidebar-right">
 	<div class="listimg listimg_1_of_2">
-		 <img src="images/pic9.jpg" alt="">
+		 <img src="{% static 'images/pic3.jpg' %}" alt="">
 	</div>
 	<div class="text1 list_1_of_2">
 	  <div class="extra-wrap1">
