--- a/daawa/templates/episodes.html
+++ b/daawa/templates/episodes.html
@@ -338,8 +338,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			</div>
 			<div class="grid_1_of_4 images_1_of_4">
 				<h3>Latest Music</h3>
-				 <p><a href=""><img src="{% static 'images/art-pic1.jpg' %}" alt="">Sed Suspendisse fringilla sagittis auctor. Mauris aliquam suscipit adipiscing. Pellentesque  ultrices.</a></p>
-			 	 <p class="top"><a href=""><img src="{% static 'images/art-pic2.jpg' %}" alt="">Sed Suspendisse fringilla sagittis auctor. Mauris aliquam suscipit adipiscing. Pellentesque  ultrices.</a></p>
+				 <p><a href="#"><img src="{% static 'images/art-pic1.jpg' %}" alt="">Sed Suspendisse fringilla sagittis auctor. Mauris aliquam suscipit adipiscing. Pellentesque  ultrices.</a></p>
+			 	 <p class="top"><a href="#"><img src="{% static 'images/art-pic2.jpg' %}" alt="">Sed Suspendisse fringilla sagittis auctor. Mauris aliquam suscipit adipiscing. Pellentesque  ultrices.</a></p>
 			</div>
 	</div>
 </div>
