Added date in index

--- a/daawa/templates/index.html
+++ b/daawa/templates/index.html
@@ -242,8 +242,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	  <div class="extra-wrap1">
           <a href="#" class="link4">{{ get_all_shks.sheikh_name}}</a><br>
           <span class="color1">{{ get_all_shks.lecture_name}}</span><br>
-          Genre: <a href="#" class="color2">duis</a> / <a href="#" class="color2">soluta nobis</a><br>
-          <span class="link-top">Actors: <a href="#" class="color2">Conse ctetur,<br>{{ get_islam_serie.serie_lecture_name}}</a> </span> 
+          <a href="#" class="color2">{{ get_all_shks.lecture_date}}</a> 
+           
       </div>
     </div>
 	<div class="clear"></div>
